# solar-forecasting-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.mlflow  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
grafana/dashboards/mlflow/: test_dashboard_provisioning.json
grafana/dashboards/monitoring/: monitoring_dashboard.json
grafana/provisioning/dashboards/: dashboard_config.yml
grafana/provisioning/datasources/: postgresql.yml
infrastructure/docker/: Dockerfile.mlflow
infrastructure/scripts/: init_aws_resources.sh  setup_environment.sh
notebooks/: 01_data_exploration.ipynb  02_data_processing.ipynb  02_test_preprocessor.ipynb  03_model_experiments.ipynb  04_trainining_pipeline.ipynb  05_batch_predictor.ipynb
sql/: init.sql
src/batch/: orchestrator.py  predictor.py  storage.py
src/config/: settings.py
src/data/: loader.py  preprocessor.py
src/model/: evaluator.py  model_config.py  model_utils.py  registry.py  run_pipeline.py  trainer.py
src/monitoring/: db_writer.py  drift_detector.py  monitor_flow.py  reference_collector.py
src/utils/: __init__.py  mlflow_utils.py
tests/: conftest.py
tests/integration/: test_training_pipeline.py
tests/test_data/: edge_case_generation.csv  edge_case_weather.csv  sample_generation.csv  sample_weather.csv
tests/unit/: test_batch_orchestrator.py  test_batch_predictor.py  test_batch_storage.py  test_data_loader.py
